Wraps up bugs related to state when using the app outside its normal user flow. Updates app to load preview urls from backend.

--- a/src/pages/styles/storyDetail.css
+++ b/src/pages/styles/storyDetail.css
@@ -85,6 +85,13 @@
     justify-content: center;
 }
 
+#storyDetailInformationContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 @media screen and (max-width: 480px) {
     #storyContainer {
         width: 100%;
